replace DatatypeConverter.printBase64Binary from jaxb-api with java.util.Base64 (for compatibility with java >= 9)